manifest.json fixed

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
    <head>
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <link rel="manifest" href="/manifest.json" />
       <meta name="viewport" content="width=device-width,initial-scale=1.0" />
       <link
          rel="apple-touch-icon"
@@ -74,6 +75,9 @@
          href="/img/icons/favicon-16x16.png"
       />
       <link rel="manifest" href="/img/icons/manifest.json" />
+      <meta name="apple-mobile-web-app-capable" content="yes" />
+      <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+      <meta name="apple-mobile-web-app-title" content="SpotiParty" />
       <meta name="msapplication-TileColor" content="#00ba61" />
       <meta
          name="msapplication-TileImage"
